--- a/src/index.html
+++ b/src/index.html
@@ -16,25 +16,28 @@
   </head>
   <body>
     <load ="partials/header.html" />
-    <section>
-      <div class="formCont">
-        <form class="form">
-          <input
-            type="text"
-            class="input"
-            name="imgInput"
-            placeholder="Search images..."
-          />
-          <button type="submit" class="btn">Search</button>
-        </form>
-      </div>
-      <div class="loader-container">
-        <div class="loader"></div>
-      </div>
-      <div class="gallery-container">
-        <ul class="gallery"></ul>
-      </div>
-    </section>
+    <main>
+      <section>
+        <div class="form-container">
+          <form class="form">
+            <input
+              type="text"
+              class="input"
+              name="queryInput"
+              placeholder="Search images..."
+            />
+            <button type="submit" class="btn">Search</button>
+          </form>
+        </div>
+        <div class="loader-container">
+          <span class="loader is-hidden"></span>
+        </div>
+        <div class="gallery">
+          <!-- <a href="images/image1.jpg"><img src="images/thumbs/thumb1.jpg" alt="" title=""/></a>
+    <a href="images/image2.jpg"><img src="images/thumbs/thumb2.jpg" alt="" title="Beautiful Image"/></a> -->
+        </div>
+      </section>
+    </main>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
