--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,11 @@
             <button type="submit" class="btn">Search</button>
           </form>
         </div>
-        <div class="loader-container">
-          <span class="loader is-hidden"></span>
-        </div>
-        <div class="gallery">
-          <!-- <a href="images/image1.jpg"><img src="images/thumbs/thumb1.jpg" alt="" title=""/></a>
-    <a href="images/image2.jpg"><img src="images/thumbs/thumb2.jpg" alt="" title="Beautiful Image"/></a> -->
-        </div>
+        <ul class="gallery"></ul>
       </section>
+      <div class="loader-container">
+        <span class="loader is-hidden"></span>
+      </div>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
